[package]
name = "tg9"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
grammers-client = "0.5.0"
grammers-session = "0.5.1"
lazy_static = "1.4.0"
ratatui = "0.25.0"
serde = "1.0.197"
serde_derive = "1.0.197"
signal-hook = "0.3.17"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
