[package]
name = "tg9"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
grammers-client = "0.5.0"
grammers-crypto = "0.6.0"
grammers-mtproto = "0.5.0"
grammers-mtsender = "0.5.0"
grammers-session = "0.5.1"
grammers-tl-types = "0.5.1"
log = "0.4.21"
# lazy_static = "1.4.0"
ratatui = "0.25.0"
signal-hook = { version = "0.3.17", default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = "0.7.10"
